[package]
name = "bee_solver"
description = "Solver for the NYT Spelling Bee"
authors = ["Jacob Elder"]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
regex = "1.11.1"
wasm-bindgen = "0.2.100"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bee_solver"
path = "src/bin/bee_solver/main.rs"

[profile.release]
lto = true
