[package]
name = "bee_solver"
description = "Solver for the NYT Spelling Bee"
authors = ["Jacob Elder"]
repository = "https://github.com/jelder/bee_solver"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.34", features = ["derive"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }
itertools = "0.14.0"
libflate = "2.1.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
wasm-bindgen = "0.2.100"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bee_solver"
path = "src/bin/bee_solver/main.rs"

[profile.release]
lto = true

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
